--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,43 @@
 # Dependencies
 node_modules/
+.pnp/
+.pnp.js
+
+# Testing
+coverage/
+
+# Production
+dist/
+build/
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env
+
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build outputs
-dist/
-build/
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Storybook
 storybook-static/
+
+# Cache
+.cache/
+.temp/
 
 # IDE and editor files
 .idea/
@@ -18,9 +48,6 @@ storybook-static/
 
 # TypeScript
 *.tsbuildinfo
-
-# Test coverage
-coverage/
 
 # Environment variables
 .env
